api/swim_form/src/tests/derive/form/unknown_field_attr.stderr
error: Unknown container attribute
  --> $DIR/src/tests/derive/form/unknown_field_attr.rs:18:14
   |
18 |     #[derive(Form)]
   |              ^^^^
